# advent-of-code

./: .gitignore
2015/: .gitignore  README.md
2015/day_01/: day_01.py
2015/day_02/: day_02.py
2015/day_03/: day_03.py
2015/day_04/: day_04.py
2015/day_05/: day_05.py
2015/day_06/: Cargo.toml  day_06.py  day_06.rs
2015/day_07/: day_07.py
2015/day_08/: day_08.py
2015/day_09/: day_09.py
2015/day_10/: day_10.py
2015/day_11/: day_11.py
2015/day_12/: day_12.py
2015/day_13/: day_13.py
2015/day_14/: day_14.py
2018/: .gitignore  README.md
2018/day_01/: Cargo.toml
2018/day_01/input/: puzzle.md
2018/day_01/src/: main.rs
2018/day_02/: Cargo.toml
2018/day_02/input/: puzzle.md
2018/day_02/src/: main.rs
2018/day_03/: Cargo.toml
2018/day_04/: Cargo.toml
2018/day_05/: Cargo.toml
2018/day_06/: Cargo.toml
2018/day_07/: Cargo.toml
2018/day_08/: Cargo.toml
2018/day_09/: Cargo.toml
2018/day_10/: Cargo.toml
2018/day_11/: Cargo.toml
2018/day_12/: Cargo.toml
2018/day_13/: Cargo.toml
2018/day_14/: Cargo.toml
2018/day_15/: Cargo.toml  notes.md
2018/day_16/: Cargo.toml
2018/day_17/: Cargo.toml
2018/day_19/: Cargo.toml  notes.md
2018/day_20/: Cargo.toml
2018/day_21/: Cargo.toml  notes.md
2018/day_22/: Cargo.toml  notes.md
2018/day_24/: Cargo.toml
2025/: .gitignore  CMakeLists.txt  README.md
2025/day_01/: main.cpp
2025/day_02/: main.cpp
2025/day_03/: main.cpp
2025/day_04/: main.cpp
2025/day_05/: main.cpp
2025/day_06/: main.cpp
2025/day_07/: main.cpp
2025/day_08/: main.cpp
2025/day_09/: main.cpp
(+48 files in other folders)
